--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <div class="text">
             <div class="number">02</div>
 
-<h4>Get Started</h4>
-<h2>What level of  hiker are you?</h2>
-<p>Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker? </p>
+<h4>Hiking Essentials</h4>
+<h2>Picking the right Hiking Gear!</h2>
+<p>The nice thing about beginning hiking is that you don’t really need any special gear, you can probably get away with things you already have. Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get heavy and chafe wif they get sweaty or wet.</p>
 <button>Read more</button>
             
         </div>
@@ -93,9 +93,9 @@
         <div class="text">
             <div class="number">03</div>
 
-<h4>Get Started</h4>
-<h2>What level of  hiker are you?</h2>
-<p>Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker? </p>
+<h4>where you go is the key</h4>
+<h2>Understand Your Map & Timing</h2>
+<p>To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag. Read over the guide, study the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike. For example, I’ll read the guide and know that say, in a mile, I make a right turn at the junction..</p>
 <button>Read more</button>
             
         </div>
